force-app/main/default/objects/Campaign_Field_History__c/Campaign_Field_History__c.object-meta.xml
<CustomObject>
    <label>Campaign Field History</label>
    <nameField>
        <displayFormat>CFH-{000000}</displayFormat>
        <label>Campaign Field History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Campaign Field History</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>