force-app/main/default/objects/Campaign_Field_History__c/fields/Action_taken__c.field-meta.xml
<CustomField>
    <fullName>Action_taken__c</fullName>
    <formula>IF (ISBLANK(Field_Name__c), &apos;Created&apos;, 
 IF ((ISBLANK(Field_Value_Old__c) &amp;&amp; ISBLANK(Field_Value_New__c)),&apos;Updated &apos;+Field_Name__c,
  IF ( ISBLANK (Field_Value_New__c), &apos;Deleted &apos; + Field_Value_Old__c + &apos; in &apos; + Field_Name__c,
   IF ( ISBLANK (Field_Value_Old__c), &apos;Updated &apos; + Field_Name__c + &apos; to &apos; + Field_Value_New__c, &apos;Updated &apos; + Field_Name__c + &apos; from &apos; +  Field_Value_Old__c + &apos; to &apos; + Field_Value_New__c
   )
  )
 )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Action Taken</label>
    <type>Text</type>
</CustomField>