force-app/main/default/objects/Campaign_Field_History__c/fields/Field_Name__c.field-meta.xml
<CustomField>
    <fullName>Field_Name__c</fullName>
    <description>The name of the Field whose value has been changed in Campaign Object</description>
    <label>Field Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>