force-app/main/default/objects/Campaign_Field_History__c/fields/Field_Value_Old__c.field-meta.xml
<CustomField>
    <fullName>Field_Value_Old__c</fullName>
    <label>Field Value Old</label>
    <length>255</length>
    <type>Text</type>
</CustomField>